@startuml
'https://plantuml.com/class-diagram

class Record {
    - rank: int
    - name: String
    - mark: int
    - time: LocalDateTime

    + Record(int rank,String name,int mark,LocalDateTime time)
    + getRank(): int
    + setRank(int): void
    + getName(): String
    + setName(String): void
    + getMark(): int
    + setMark(int): void
    + getTime(): LocalDateTime
    + setTime(LocalDateTime): void
}

interface RecordDao {
    + getAllRecord(): List<Record>
    + doAdd(Record): void
}

class RecordDaoImpl {
    - records: List<Record>
    + RecordDaoImpl()
    + getAllRecord(): List<Record>
    + doAdd(Record): void
}

RecordDaoImpl ..|>RecordDao
RecordDaoImpl -->Record


@enduml